@@ -27,6 +27,8 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+10-May-2010 Jean-Marie Simonet
+^ Hathor's views (20384]
 
 09-May-2010 Ron Severdia
 # BlueStork UI fixes
